--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <input type="text" id="name" placeholder="Enter your email"></input>
     
     <p>Your Message</p>
-    <textarea type="text" id="name" placeholder="Enter your email"></textarea> 
+    <textarea type="text" id="name" placeholder="Your Message"></textarea> 
     <br>
    
     <label>Country</label>
